# seg-comp

./: .gitignore  README.md  biome.jsonc  main.py  package.json  pyproject.toml  run_parser.py
.githooks/: post-merge
keylogger/: .env.example  README.md  main.py  pyproject.toml  utils.py
keylogger/db/: entities.py
receiver/: .env.example  index.ts  package.json
relay/: .env.example  README.md  index.ts  package-lock.json  package.json
sensitive_parser/: __init__.py  parser.py  utils.py
sensitive_parser/strategies/: __init__.py  base.py  credit_card.py  email.py  phone.py  social_flag.py  social_keyword.py
server/: .gitignore  index.ts  package-lock.json  package.json
